# Msija

./: .gitignore  pyproject.toml
app/: celery.py  init.py  main.py  parsing.py  settings.py  tasks.py
app/translation/: languages.py  llm.py  workflow.py
