[project]
name = "srt-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-core>=0.3.58",
    "langchain-google-genai>=2.1.4",
    "langsmith>=0.3.42",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
