[project]
name = "srt-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-core>=0.3.58",
    "langchain-google-genai>=2.1.4",
    "langsmith>=0.3.42",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "redis>=6.0.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
